# chiron

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  SESSION_MANAGEMENT_README.md  slm_mental_health_plan.md
.cargo/: config.toml  config.toml.cuda-example
data/: mi_knowledge.md
docs/: architecture.md
evals/: eval_2026-02-11T15-43-58.json  eval_2026-02-12T01-56-57.json  eval_2026-02-25T19-27-21.json  eval_2026-02-25T20-01-12.json  script_standard_v5_structured.json  script_standard_v6_structured.json
prompts/: coach.toml  modes.toml  rubric.md  supervisor.toml
prompts/test_scripts/: crisis_protocol.toml  mode_exercise.toml  resistance_recovery.toml  standard_5turn.toml
src/: catalog.rs  lib.rs  main.rs  router.rs
src/agents/: assessment.rs  case_notes.rs  intake.rs  intervention.rs  mod.rs  monitoring.rs  peer.rs  protocol.rs  research.rs
src/dialogue/: mod.rs  session.rs  therapeutic.rs
src/eval/: catalog.rs  mod.rs  results.rs  script.rs
src/inference/: mod.rs  ollama.rs
src/knowledge/: seed.rs
src/memory/: case_notes.rs  embeddings.rs  mod.rs  retrieval.rs  seed.rs  store.rs  vectors.rs
src/orchestrator/: mod.rs
src/provider/: chat_template.rs  completion.rs  config.rs  llamacpp.rs  mod.rs
src/safety/: crisis_detection.rs  filters.rs  mod.rs
src/supervision/: mod.rs  think_parser.rs
