[package]
name = "chiron"
version = "0.1.0"
edition = "2024"

[dependencies]
# ML inference
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
tokenizers = "0.21"

# Agent framework
rig-core = "0.30"

# RAG: vector store + local embeddings
rig-sqlite = "0.1"
rig-fastembed = "0.2"
tokio-rusqlite = "0.6"
rusqlite = "0.32"
sqlite-vec = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tokio-stream = "0.1"

# Chat template rendering (HF Jinja2 templates)
minijinja = { version = "2", features = ["loader"] }

[profile.release]
opt-level = 3
