[package]
name = "chiron"
version = "0.2.0"
edition = "2024"

[dependencies]
# LLM inference via llama.cpp
llama-cpp-2 = { version = "0.1.138", features = ["cuda"] }

# Agent framework
rig-core = "0.30"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tokio-stream = "0.1"

# Database (chat history + case notes)
tokio-rusqlite = "0.6"
rusqlite = "0.32"

# UTF-8 decoding for llama.cpp token output
encoding_rs = "0.8"

[profile.release]
opt-level = 3
