[package]
name = "chiron"
version = "0.2.0"
edition = "2024"

[dependencies]
# LLM inference via llama.cpp
llama-cpp-2 = "0.1.139"

# Agent framework
rig-core = "0.33"

# RAG: vector store + embeddings
rig-lancedb = "0.4"
rig-fastembed = "0.3"
lancedb = { version = "0.23", default-features = false }
arrow-array = "56"
arrow-schema = "56"
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tokio-stream = "0.1"

# Database (chat history + case notes)
tokio-rusqlite = "0.6"
rusqlite = "0.32"

# UTF-8 decoding for llama.cpp token output
encoding_rs = "0.8"

[[bin]]
name = "verify_eval"
path = "src/bin/verify_eval.rs"

[features]
default = []  # CPU-only — safe for CI and non-GPU machines
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
rocm = ["llama-cpp-2/rocm"]
vulkan = ["llama-cpp-2/vulkan"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
